--- a/src/component/basic/top_nav.ejs
+++ b/src/component/basic/top_nav.ejs
@@ -1,40 +1,41 @@
+<!--通用头部导航-->
 
 <!--通用头部导航-->
 <div class="nav">
     <div class="jf_nav">
 
         <div>
-        <!-- jf logo -->
-        <a class="jf_nav_logo" href=""></a>
-        <!--jf 分类-->
-        <div class="jf_nav_content">
-            <ul>
-                <li<% if (tabone) { %> class="show"<%}%>>
-                    <a href="main.html">首页</a>
-                </li>
-                <li <% if (tabtwo) { %> class="show"<%}%>>
-                    <a href="platform.html">平台介绍</a>
-                </li>
-                <li <% if (tabthree) { %> class="show"<%}%>>
-                    <a href="open_platform.html">开放平台
-                    </a>
-                </li>
-                <li <% if (tabfour) { %> class="show"<%}%>>
-                    <a href="about_jf.html">关于嘉福
-                    </a>
-                </li>
-                <li <% if (tabfive) { %> class="show"<%}%>>
-                    <a href="contact_us.html">
-                        联系我们
-                    </a>
-                </li>
-            </ul>
-        </div>
+            <!-- jf logo -->
+            <a class="jf_nav_logo" href=""></a>
+            <!--jf 分类-->
+            <div class="jf_nav_content">
+                <ul>
+                    <li<% if (tabone) { %> class="show"<%}%>>
+                        <a href="main.html">首页</a>
+                    </li>
+                    <li <% if (tabtwo) { %> class="show"<%}%>>
+                        <a href="platform.html">平台介绍</a>
+                    </li>
+                    <li <% if (tabthree) { %> class="show"<%}%>>
+                        <a href="open_platform.html">开放平台
+                        </a>
+                    </li>
+                    <li <% if (tabfour) { %> class="show"<%}%>>
+                        <a href="about_jf.html">关于嘉福
+                        </a>
+                    </li>
+                    <li <% if (tabfive) { %> class="show"<%}%>>
+                        <a href="contact_us.html">
+                            联系我们
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
             <!--jf 登录-->
             <div class="jf_nav_login">
                 <a class="login_btn company_login" href="http://e.jia-fu.cn" target="_blank">我是企业</a>
-            <span class="login_btn employee_login">我是员工</span>
+                <span class="login_btn employee_login">我是员工</span>
                 <div class="QR_code">
                     <div class="triangle"></div>
                     <div class="weixin">
@@ -56,7 +57,8 @@
                     </div>
                 </div>
             </div>
-    </div>
+        </div>
     </div>
     <% if(homepage){%><div class="jf_nav_tab"></div><%}%>
 </div>
+
