--- a/src/component/contact/form.ejs
+++ b/src/component/contact/form.ejs
@@ -35,12 +35,12 @@
                     <p>咨询事宜</p>
                     <select name="select">
                         <option value="请选择" hidden="" >请选择</option>
-                        <option value="投诉与建议" style="color:#000000;">员工福利咨询</option>
-                        <option value="商务合作" style="color:#000000;">费用报销咨询</option>
-                        <option value="福利理财" style="color:#000000;">税务筹划咨询</option>
-                        <option value="费用报销" style="color:#000000;">商务合作</option>
-                        <option value="注册开通" style="color:#000000;">投诉与建议</option>
-                        <option value="福利取现" style="color:#000000;">其他</option>
+                        <option value="员工福利咨询" style="color:#000000;">员工福利咨询</option>
+                        <option value="费用报销咨询" style="color:#000000;">费用报销咨询</option>
+                        <option value="税务筹划咨询" style="color:#000000;">税务筹划咨询</option>
+                        <option value="商务合作" style="color:#000000;">商务合作</option>
+                        <option value="投诉与建议" style="color:#000000;">投诉与建议</option>
+                        <option value="其他" style="color:#000000;">其他</option>
                     </select>
                 </div>
                 <div>
