--- a/src/component/homepage/pageone.ejs
+++ b/src/component/homepage/pageone.ejs
@@ -10,8 +10,8 @@
                     <p>全场景员工福利服务体系</p>
                 </div>
                 <!-- 立即注册-->
-                <a class="register_btn" data-text="企业登录" href="http://e.jia-fu.cn" target="_blank">
-                    <span>企业登录</span>
+                <a class="register_btn" data-text="企业登录" href="https://e.jia-fu.cn/register/index" target="_blank">
+                    <span>企业注册</span>
                 </a>
                 <!--分子-->
                 <div class="molecule" id="molecule">
