--- a/src/component/homepage/pageseven.ejs
+++ b/src/component/homepage/pageseven.ejs
@@ -15,8 +15,8 @@
                     <div>开始您的嘉福之旅</div>
                 </div>
                 <!--立即注册-->
-                <a class="register_btn" href="http://e.jia-fu.cn" target="_blank">
-                    <span>企业登录</span>
+                <a class="register_btn" href="https://e.jia-fu.cn/register/index" target="_blank">
+                    <span>企业注册</span>
                 </a>
                 <!-- 利益点-->
             </div>
