--- a/src/component/basic/top_nav_new.less
+++ b/src/component/basic/top_nav_new.less
@@ -1,4 +1,5 @@
-/*通用底部样式*/
+/*
+!*通用底部样式*!
 @colorDarkGray: #4a4a4a;
 @colorMiddleGray: #ababab;
 @colorLightGray: #dddddd;
@@ -24,7 +25,7 @@ div, span, h1, p, img, ol, ul, li, form, label, table, tbody, tfoot, thead, tr, 
   background: transparent;
 }
 
-a{
+a {
   text-decoration: none;
   tap-highlight-color: transparent;
   appearance: none;
@@ -59,7 +60,7 @@ html,body{
       margin: 0 auto;
     }
 
-    /* jf logo*/
+    !* jf logo*!
     .jf_nav_logo {
       position: relative;
       float: left;
@@ -77,14 +78,14 @@ html,body{
         opacity: .7;
       }
     }
-    /* jf login*/
+    !* jf login*!
     .jf_nav_login {
       display: inline-block;
       height: 100%;
       font-size: 14px;
       position: relative;
       line-height: 70px;
-      margin-left: 140px;
+      margin-left: 100px;
       .login_btn {
         display: inline-block;
         padding: 0 25px;
@@ -128,62 +129,7 @@ html,body{
 
       }
 
-      /*hove QR code*/
-      .QR_code {
-        display: none;
-        z-index: -1;
-        opacity: 0;
-        filter: alpha(opacity=0);
-        position: absolute;
-        top: 70px;
-        left: 0;
-        width: 250px;
-        height: 120px;
-        border: 1px solid @colorMiddleGray;
-        border-radius: 3px;
-        padding: 20px;
-        background-color: @colorWhite;
-        .triangle {
-          position: absolute;
-          top: -11px;
-          right: 90px;
-          width: 20px;
-          height: 20px;
-          border-left: 1px solid @colorMiddleGray;
-          border-top: 1px solid @colorMiddleGray;
-          background-color: @colorWhite;
-          transform: rotate(45deg);
-
-        }
-        .weixin, .app {
-          position: relative;
-          display: inline-block;
-          list-style-type: none;
-          text-align: center;
-          img {
-            width: 100px;
-            height: 100px;
-            padding: 0 10px;
-          }
-        }
-        .weixin:after {
-          content: '-员工微信端-';
-          position: absolute;
-          top: 82px;
-          left: 20px;
-          color: #4a4a4a;
-
-        }
-        .app:after {
-          content: '-员工APP端-';
-          position: absolute;
-          top: 82px;
-          left: 20px;
-          color: #4a4a4a;
-
-        }
-      }
-      /*nav num*/
+      !*nav num*!
       .nav_contact {
         position: relative;
         display: inline-block;
@@ -248,7 +194,7 @@ html,body{
           filter: alpha(opacity=0);
           position: absolute;
           top: 50px;
-          right: -35px;
+          right: 10px;
           width: 330px;
           height: 125px;
           border: 1px solid @colorMiddleGray;
@@ -282,9 +228,83 @@ html,body{
             }
           }
         }
+        .QR_icon{
+          display: inline-block;
+          width: 30px;
+          height: 30px;
+          padding: 0 5px;
+          vertical-align: middle;;
+          background: url("../images/jf_main_QR.png") no-repeat;
+          &:hover {
+            transition: all ease-in-out .2s;
+            background-image: url("../images/jf_main_QR_blue.png");
+          }
+          &:hover +.QR_code{
+            display: block;
+            top: 90px;
+            opacity: 1;
+            filter: alpha(opacity=100);
+            transition: opacity ,top 0.1s, 1s;
+          }
+        }
+        !*hove QR code*!
+        .QR_code {
+          display: none;
+          z-index: -1;
+          opacity: 0;
+          filter: alpha(opacity=0);
+          position: absolute;
+          top: 70px;
+          left: -60px;
+          width: 250px;
+          height: 120px;
+          border: 1px solid @colorMiddleGray;
+          border-radius: 3px;
+          padding: 20px;
+          background-color: @colorWhite;
+          .triangle {
+            position: absolute;
+            top: -11px;
+            right: 90px;
+            width: 20px;
+            height: 20px;
+            border-left: 1px solid @colorMiddleGray;
+            border-top: 1px solid @colorMiddleGray;
+            background-color: @colorWhite;
+            transform: rotate(45deg);
+
+          }
+          .weixin, .app {
+            position: relative;
+            display: inline-block;
+            list-style-type: none;
+            text-align: center;
+            img {
+              width: 100px;
+              height: 100px;
+              padding: 0 10px;
+            }
+          }
+          .weixin:after {
+            content: '-员工微信端-';
+            position: absolute;
+            top: 82px;
+            left: 20px;
+            color: #4a4a4a;
+
+          }
+          .app:after {
+            content: '-员工APP端-';
+            position: absolute;
+            top: 82px;
+            left: 20px;
+            color: #4a4a4a;
+
+          }
+        }
       }
     }
-    /* jf sort*/
+    !* jf sort*!
     .jf_nav_content {
       display: inline-block;
       float: left;
@@ -363,7 +383,7 @@ html,body{
     padding: 0 25px;
     line-height: 30px;
   }
-  .nav .jf_nav .jf_nav_login .login_btn.employee_login:hover+.QR_code {
+  .nav .jf_nav .jf_nav_login .nav_contact .QR_icon:hover+.QR_code {
     top: 70px;
   }
   .nav .jf_nav .jf_nav_login .nav_contact .phone:hover+.phone_box {
@@ -373,4 +393,4 @@ html,body{
     padding-bottom: 55px;
   }
 
-}
+}*/
