--- a/src/component/homepage/pagefour.less
+++ b/src/component/homepage/pagefour.less
@@ -83,8 +83,8 @@
           position: relative;
           text-align: center;
           font-weight: bold;
-          animation: titleShowP2 2s ease-in-out;
-          animation-play-state: paused;
+
+          //animation-play-state: paused;
           @-webkit-keyframes titleShowP2 {
             from {
               filter: alpha(opacity=0);
@@ -127,8 +127,8 @@
           color: @colorDarkGray;
           font-size: 16px;
           margin: 80px 0 100px 0;
-          animation: p2explainShow 2s ease-in-out;
-          animation-play-state: paused;
+
+          //animation-play-state: paused;
           @-webkit-keyframes p2explainShow {
             from {
               filter: alpha(opacity=0);
@@ -169,8 +169,8 @@
         .box_content {
           margin-top: 150px;
           padding: 0 80px;
-          animation: boxContentShow 2s ease-in-out;
-          animation-play-state: paused;
+
+          //animation-play-state: paused;
           @-webkit-keyframes boxContentShow {
             from {
               filter: alpha(opacity=0);
@@ -379,13 +379,13 @@
     .uvs_bg {
       .page2_content {
         .page2_title {
-          animation-play-state: running;
+          animation: titleShowP2 2s ease-in-out;
         }
         .explain {
-          animation-play-state: running;
+          animation: p2explainShow 2s ease-in-out;
         }
         .box_content {
-          animation-play-state: running;
+          animation: boxContentShow 2s ease-in-out;
         }
       }
     }
