--- a/src/component/homepage/pagesex.less
+++ b/src/component/homepage/pagesex.less
@@ -32,8 +32,8 @@
         position: relative;
         text-align: center;
         font-weight: bold;
-        animation: titleShowP6 2s ease-in-out ;
-        animation-play-state: paused;
+
+        //animation-play-state: paused;
         @-webkit-keyframes titleShowP6 {
           from {
             filter: alpha(opacity=0);
@@ -72,8 +72,8 @@
       }
       .partner_list {
         margin-top: 100px;
-        animation: listHoldUp 2s ease-out .1s forwards;
-        animation-play-state: paused;
+
+        //animation-play-state: paused;
         filter: alpha(opacity=100);
         opacity: 0;
         transform-origin: 40% 0;
@@ -185,10 +185,10 @@
   .partner_bg {
     .page6_content {
       .page6_title{
-        animation-play-state: running;
+        animation: titleShowP6 2s ease-in-out ;
       }
       .partner_list {
-        animation-play-state: running;
+        animation: listHoldUp 2s ease-out .1s forwards;
       }
     }
   }
