乌鲁木齐分公司更新1130

--- a/src/component/contact/map.ejs
+++ b/src/component/contact/map.ejs
@@ -471,6 +471,8 @@
         </div>
     </div>
 
+
+
     <!--青岛-->
     <div class="branch_qingdao">
         <!--显示部分-->
@@ -506,4 +508,39 @@
         </div>
     </div>
 
+
+    <!--乌鲁木齐-->
+    <div class="branch_wulumuqi">
+        <!--显示部分-->
+
+        <div class="branch_name">
+            <div>
+                <p>乌鲁木齐</p>
+                <p>WULUMUQI</p>
+            </div>
+
+            <img src="images/add_city.png">
+        </div>
+
+        <!--隐藏图片部分-->
+        <div class="branch_map">
+            <img src="images/wulumuqi.png">
+        </div>
+
+        <!--隐藏折叠部分-->
+        <div class="branch_info">
+            <div class="content">
+                <div class="arrow_up"></div>
+                <div class="initial-content">
+                    <div class="initial-content_top"></div>
+                    <div class="initial-content_bottom"></div>
+                </div>
+                <div class="final-content">
+                    <h3>乌鲁木齐</h3>
+                    <p>地址：乌鲁木齐市经济开发区（头屯河区）天鹅湖路2号爱地大厦20层2002室</p>
+                    <p>电话：15199085275</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
