--- a/src/component/contact/photo.ejs
+++ b/src/component/contact/photo.ejs
@@ -54,6 +54,7 @@
                             <div class="back"><img src="images/chengdu_back.png"></div>
                         </div>
                     </div>
+
                     <div class="container">
                         <div class="back"><img src="images/contact_create.png"></div>
                     </div>
@@ -63,10 +64,18 @@
                             <div class="back"><img src="images/shanghai_back.png"></div>
                         </div>
                     </div>
+
                     <div class="container">
                         <div class="flip">
                             <div class="front"><img src="images/jinan_face.png"></div>
                             <div class="back"><img src="images/jinan_back.png"></div>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="flip">
+                            <div class="front"><img src="images/wulumuqi_face.png"></div>
+                            <div class="back"><img src="images/wulumuqi_back.png"></div>
                         </div>
                     </div>
                 </div>
@@ -96,25 +105,33 @@
                             <div class="back"><img src="images/qingdao_back.png"></div>
                         </div>
                     </div>
+
+                    <div class="container">
+                        <div class="flip">
+                            <div class="front"><img src="images/ningbo_face.png"></div>
+                            <div class="back"><img src="images/ningbo_back.png"></div>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
+
             <div class="second_contents">
         <!--        <div class="container" style="height: 410px">
                     <img src='images/city_one.png' style="height: 410px">
                 </div>-->
             </div>
-            <div class="second_contents">
-                <div class="container" style="margin-bottom: 10px;">
-                    <div class="front"><img src="images/contact_jf.png"></div>
-                </div>
+
+         <!--   <div class="second_contents">
+
                 <div class="container">
                     <div class="flip">
                         <div class="front"><img src="images/ningbo_face.png"></div>
                         <div class="back"><img src="images/ningbo_back.png"></div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
 
         <!--第三行-->
@@ -144,6 +161,7 @@
                     <div class="back"><img src="images/tianjing_back.png"></div>
                 </div>
             </div>
+
 
         </div>
 
