--- a/src/component/mobile/page_eight.html
+++ b/src/component/mobile/page_eight.html
@@ -121,6 +121,14 @@
         </div>
 
 
+        <div class="frame">
+            <div class="area">乌鲁木齐</div>
+            <div class="area_sub">WuLuMuQi</div>
+            <div class="area_title">乌鲁木齐</div>
+            <div class="area_address">地址：乌鲁木齐市经济开发区（头屯河区）天鹅湖路2号爱地大厦20层2002室</div>
+            <div class="area_telphone">电话：<a href="tel:15199085275">15199085275</a></div>
+        </div>
+
     </div>
 
 
