--- a/src/component/contact/map.less
+++ b/src/component/contact/map.less
@@ -2024,6 +2024,144 @@
 
 
 
+    .branch_wulumuqi{
+      .branch_name{
+        position: absolute;
+        bottom: 89%;
+        left: 18%;
+        z-index: 20;
+        text-align: center;
+        div{
+          float: right;
+          padding-left:10px;
+        p {
+
+          font-size: 16px;
+          text-align: center;
+          padding-bottom: 3px;
+          &:first-child {
+            font-weight: bold;
+          }
+        }
+        }
+        img{
+          width: 24px;
+        }
+        &:hover{
+          z-index: 25;
+        }
+        &:hover +.branch_map{
+          opacity:1;
+          filter:alpha(opacity=100);
+          z-index: 21;
+        }
+        &:hover + .branch_map + .branch_info{
+          opacity: 1;
+          filter:Alpha(opacity=100);
+          z-index: 40;
+        }
+        &:hover + .branch_map + .branch_info .content{
+          filter:Alpha(opacity=100);
+        }
+        &:hover + .branch_map + .branch_info .content .final-content{
+          filter:Alpha(opacity=100);
+        }
+
+        &:hover + .branch_map + .branch_info .initial-content_bottom{
+          transform: rotatex(0) scaleY(1)
+
+        }
+      }
+      .branch_map{
+        opacity:0;
+        filter:alpha(opacity=0);
+        position: absolute;
+        bottom: 45%;
+        right: 66%;
+        z-index: 1;
+        width: 37%;
+        transition: all 0.5s;
+        img{
+          width: 100%;
+        }
+
+
+      }
+      .branch_info{
+        opacity: 0;
+        filter:Alpha(opacity=0);
+        position: absolute;
+        bottom:59%;
+        right: 69%;
+        z-index: 1;
+        width: 30%;
+        margin: 0 auto;
+        transition: all 0.8s;
+        .content{
+          position: relative;
+          filter:alpha(opacity=0);
+          .arrow_up{
+            width: 0;
+            height: 0;
+            border-left: 60px solid transparent;
+            border-right: 15px solid transparent;
+            border-bottom: 25px solid #fff;
+            margin: 0 auto;
+            z-index: 1;
+
+          }
+          .initial-content{
+            -webkit-perspective: 1000px;
+            perspective: 1000px;
+          }
+          .initial-content_top{
+            width: 85%;
+            height: 90px;
+            background: #fff;
+            margin: 0 auto;
+            border-bottom: solid 1px #dddddd;
+            box-shadow: 0 -12px 20px 0px #ddd inset;;
+          }
+          .initial-content_bottom{
+            width: 85%;
+            height: 90px;
+            background:white;
+            margin: 0 auto;
+            transition: all 0.5s;
+            transform-style:preserve-3d;
+            transform-origin:top;
+            transform: rotateX(180deg) scaleY(0.8);
+
+          }
+          .final-content{
+            filter:Alpha(opacity=0);
+            width: 85%;
+            margin: 0 auto;
+            position: absolute;
+            top: 25px;
+            left: 22px;
+            h3{
+              font-size: 26px;
+              color: #10A6E2;
+              text-align: left;
+              padding-left: 10%;
+              padding-top: 10px;
+              margin: 10px auto;
+            }
+            p{
+              font-size: 16px;
+              text-align: left;
+              padding-top: 15px;
+              padding-left: 10%;
+            }
+          }
+
+        }
+      }
+
+    }
+
+
 
   }
 
