--- a/src/view/homepage_mobile.html
+++ b/src/view/homepage_mobile.html
@@ -29,7 +29,7 @@
         </div>
         <div class="pageone_nav_service">
             <div class="pageone_nav_service_people" onclick="jfCustomerService.click()"><img src="images/page_one/icon-artificial.png"></div>
-            <div class="pageone_nav_service_email"><a href="mailto:sales@ijafu.com"><img src="images/page_one/icon-e-mail.png."></a></div>
+            <div class="pageone_nav_service_email"><a href="mailto:sales@ijafu.com"><img src="images/page_one/icon-e-mail.png"></a></div>
             <div class="pageone_nav_service_telephone" id="service_telephone"><a></a><img src="images/page_one/icon-telephone.png"></div>
         </div>
 
@@ -755,6 +755,14 @@
             <div class="area_telphone">电话：<a href="tel:17710142588">17710142588</a></div>
         </div>
 
+
+        <div class="frame">
+            <div class="area">乌鲁木齐</div>
+            <div class="area_sub">WuLuMuQi</div>
+            <div class="area_title">乌鲁木齐</div>
+            <div class="area_address">地址：乌鲁木齐市经济开发区（头屯河区）天鹅湖路2号爱地大厦20层2002室</div>
+            <div class="area_telphone">电话：<a href="tel:15199085275">15199085275</a></div>
+        </div>
     </div>
 
 
