--- a/src/view/homepage_mobile.html
+++ b/src/view/homepage_mobile.html
@@ -680,7 +680,7 @@
             <div class="area_sub">ChengDu</div>
             <div class="area_title">成都</div>
             <div class="area_address">地址：成都市红星路二段70号四川日报大厦B区4楼</div>
-            <div class="area_telphone">电话：<a href="tel:180 8111 9126">180 8111 9126</a></div>
+            <div class="area_telphone">电话：<a href="tel:139 8214 2208">139 8214 2208</a></div>
         </div>
 
         <div class="frame">
@@ -752,7 +752,7 @@
             <div class="area_sub">JiNan</div>
             <div class="area_title">济南</div>
             <div class="area_address">地址：济南市市中区英雄山路祥泰广场5#楼2008室</div>
-            <div class="area_telphone">电话：<a href="tel:17710142588">17710142588</a></div>
+            <div class="area_telphone">电话：<a href="tel:17710142588">177 1014 2588</a></div>
         </div>
 
 
@@ -761,7 +761,7 @@
             <div class="area_sub">WuLuMuQi</div>
             <div class="area_title">乌鲁木齐</div>
             <div class="area_address">地址：乌鲁木齐市经济开发区（头屯河区）天鹅湖路2号爱地大厦20层2002室</div>
-            <div class="area_telphone">电话：<a href="tel:15199085275">15199085275</a></div>
+            <div class="area_telphone">电话：<a href="tel:15199085275">151 9908 5275</a></div>
         </div>
     </div>
 
