--- a/src/component/about_jf/history.less
+++ b/src/component/about_jf/history.less
@@ -35,12 +35,13 @@
 
     .history{
       width: 100%;
-      height: 468px;
+      height: 654px;
+      bottom: 70px;
 
      /* filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/history.png',  sizingMethod='scale');/*IE8*/
       max-width: 1073px;
       margin: 0 auto;
-      background-image: url(../images/history.png);
+      background-image: url(../../images/year-history/background_jiafu.png);
       background-size: 100%;
       background-position: center;
       background-repeat: no-repeat;
@@ -54,291 +55,76 @@
         left: 0;
         img{
           width: 100%;
-          height: 468px;
+          height: 518px;
         }
       }
-
-      .year2014_4{
+      .Event_history {
+        width: 100%;
         position: absolute;
-        left: 20px;
-        top: 116px;
-        .title{
-          font-size: 14px;
-          color: #fff;
-          position: relative;
-          left: 20px;
-        }
-        .year{
-          transform: rotate(270deg);
-          position: relative;
-          right: 35%;
-          top: 15px;
-          font-size: 20px;
-        }
-        .month{
-          position: relative;
-          bottom: 45px;
-          left: -33px;
-          font-size: 18px;
-          font-weight: 700;
-          color: #b9d3f4;
-          span{
-            font-size: 12px;
-            border-bottom: solid 1px rgb(185,211,244);
-            font-weight: normal;
-          }
-        }
-        .details_text{
-          width: 70%;
-          margin: 0 auto;
-          font-size: 12px;
-          position: relative;
-          left: 33px;
-          bottom: 32px;
-          text-align: left;
-        }
-      }
-
-      .year2014_11{
-        position: absolute;
-        left: 150px;
-        bottom:38px;
-        .title{
-          font-size: 14px;
-          color: #fff;
-          position: relative;
-          top: 0;
-          left: 5px;
-        }
-        .year{
-          transform: rotate(270deg);
-          position: relative;
-          right: 35%;
-          top: 40px;
-          font-size: 20px;
-        }
-        .month{
-          position: relative;
-          bottom: 10px;
-          left: -47px;
-          font-size: 20px;
-          font-weight: bold;
-          color: rgb(185,211,244);
-          span{
-            font-size: 12px;
-            border-bottom: solid 1px rgb(185,211,244);
-            font-weight: normal;
-          }
-        }
-        .details_text{
-          width: 70%;
-          margin: 0 auto;
-          font-size: 12px;
-          position: relative;
-          /* bottom: 10px; */
-          left: 33px;
-          text-align: left;
-        }
-      }
-
-
-      .year2015_01{
-        position: absolute;
-        left: 218px;
-        top: 116px;
-        .title{
-          font-size: 14px;
-          color: #fff;
-          position: relative;
-          left: 6px;
-        }
-        .year{
-          transform: rotate(270deg);
-          position: relative;
-          right: 23%;
-          top: 22px;
-          font-size: 20px;
-        }
-        .month{
-          position: relative;
-          bottom: 45px;
-          left: -50px;
-          font-size: 18px;
-          font-weight: 700;
-          color: #10A6E2;
-          span{
-            font-size: 12px;
-            border-bottom: solid 1px #10A6E2;
-            font-weight: normal;
-          }
-        }
-        .details_text{
-          width: 45%;
-          margin: 0 auto;
-          font-size: 12px;
-          position: relative;
-          left: 33px;
-          bottom: 32px;
-          text-align: left;
-        }
-      }
-
-
-      .year2016_05{
-        position: absolute;
-        left: 450px;
-        bottom: 38px;
-        .title{
-          font-size: 14px;
-          color: #fff;
-          position: relative;
-          top: 0;
-          left: 5px;
-        }
-        .year{
-          transform: rotate(270deg);
-          position: relative;
-          right: 43%;
-          top: 40px;
-          font-size: 20px;
-        }
-        .month{
-          position: relative;
-          bottom: 10px;
-          left: -77px;
-          font-size: 18px;
-          font-weight: bold;
-          color: #10A6E2;
-          span{
-            font-size: 12px;
-            border-bottom: solid 1px #10A6E2;
-            font-weight: normal;
-          }
-        }
-        .details_text{
-          width: 70%;
-          margin: 0 auto;
-          font-size: 12px;
-          position: relative;
-          /* bottom: 10px; */
-          left: 12px;
-          text-align: left;
-        }
-      }
-
-
-      .year2016_08{
-        position: absolute;
-        right: 130px;
-        top: 116px;
-        .title{
-          font-size: 14px;
-          color: white;
-        }
-        .year{
-          transform: rotate(270deg);
-          position: relative;
-          right: 23%;
-          top: 26px;
-          font-size: 20px
-        }
-        .month{
-          position: relative;
-          bottom: 45px;
-          left: -50px;
-          font-size: 18px;
-          font-weight: 700;
-          color: rgb(42,92,127);
-          span{
-            font-size: 12px;
-            border-bottom: solid 1px rgb(42,92,127);
-            font-weight: normal;
-          }
-        }
-        .details_text{
-          width: 45%;
-          margin: 0 auto;
-          font-size: 12px;
-          position: relative;
-          left: 33px;
-          bottom: 32px;
-          text-align: left;
-        }
-      }
-
-      .year_new{
-        position: absolute;
-        right: 68px;
-        bottom: 38px;
-        .year{
-          transform: rotate(270deg);
-          position: relative;
-          right: 26%;
-          top: 70px;
-          font-size: 20px
-        }
-        .month{
-          position: relative;
-          bottom: -15px;
-          left: -50px;
-          font-size: 18px;
-          font-weight: 700;
-          color: rgb(42,92,127);
-          span{
-            font-size: 12px;
-            border-bottom: solid 1px rgb(42,92,127);
-            font-weight: normal;
-          }
-        }
-        .title{
-          font-size: 14px;
-          color: #fff;
-          position: relative;
-          top: 0;
-          left: 30px;
-        }
-
-        .details_text{
-          width: 70%;
-          margin: 0 auto;
-          font-size: 12px;
-          position: relative;
-          left: 60px;
-          margin: 25px auto;
-          /* padding-bottom: 1px; */
-          text-align: left;
-        }
-      }
-
-      .tree_text{
-        position: absolute;
-        right: 20px;
-        top: 100px;
-        width: 20%;
-        text-align: center;
-        .big_text{
-          color: white;
-          width: 68%;
-          margin: 0 auto;
-          font-size: 16px;
-          font-weight: bold;
-          margin-bottom: 5px;
-        }
-
-        p{
-          &:last-child{
-            font-size: 12px;
-            color: #fff;
-            margin: 0 auto;
-            width: 70%;
-            text-align: left;
-
-            span{
-              font-size: 16px;
-              font-weight: bold;
+        .company-history {
+          margin-top: 18px;
+          margin-left: 36px;
+          width: 200px;
+          background-color: #ffffff;
+          border-radius: 10px;
+          border: 1px dotted #10a6e2;
+          padding: 5px;
+          display: inline-block;
+          line-height: 20px;
+          .middle {
+            width: 100%;
+            font-size: 0;
+            p {
+              display: inline;
+              //text-align: right;
+            }
+            .left {
+              width: 20%;
+              display: inline-block;
+              vertical-align: top;
+              .five {
+                font-size: 20px;
+                font-weight: bold;
+                color: #10a6e2;
+                span {
+                  font-size: 12px;
+                }
+              }
+            }
+            .right {
+              width: 80%;
+              font-size: 11px;
+              display: inline-block;
+              text-align: left;
+              padding-top: 2.4px;
+              .Event {
+                text-align: left;
+                font-size: 14px;
+              }
             }
           }
         }
+      }
+
+      .position1{
+        top:266px ;
+        right:309px ;
+      }
+      .position2{
+        top:458px ;
+        right:421px ;
+      }
+      .position3{
+        top:418px ;
+        right:92px ;
+      }
+      .position4{
+        top:266px ;
+        left:126px ;
+      }
+      .position5{
+        top:272px ;
+        left:378px ;
       }
     }
 
