Revert "嘉福官网-流程图"

--- a/src/component/about_jf/history.ejs
+++ b/src/component/about_jf/history.ejs
@@ -7,152 +7,53 @@
     </div>
 
     <div class="history">
-        <div class="Event_history position1">
-            <div hisrory_frame>
-                <img src="../../images/year-history/Dialog-box_4.png" class="year">
-            </div>
-            <div class="company-history">
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">5<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">成功应对营改增，业务平滑过渡</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">6<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">完成天使轮融资，业务战略转向聚焦中小客服</p>
-                    </div>
-                </div>
-            </div>
+
+      <!--  <div class="history_bg"><img src="../images/history.png"></div>-->
+        <div class="year2014_4">
+            <h3 class="title">嘉福成立</h3>
+            <h3 class="year">2014</h3>
+            <p class="month">4<span>月</span></p>
+            <p class="details_text">公司成立。嘉福平台上线，内部试商用。</p>
         </div>
-        <div class="Event_history position2">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_3.png" class="year">
-            </div>
-            <div class="company-history">
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">8<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">公司成立，嘉福平台立顶</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">5<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">嘉福平台上线试运行</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">12<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">上海、北京、沈阳先后开业，签约诺基亚全国福利项目</p>
-                    </div>
-                </div>
-            </div>
+
+        <div class="year2014_11">
+            <h3 class="year">2014</h3>
+            <p class="month">11<span>月</span></p>
+            <p class="details_text">北京，沈阳分公司开业，嘉福平台正式对外提供服务</p>
+            <h3 class="title">北京，沈阳分公司开业</h3>
         </div>
-        <div class="Event_history position3">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_5.png" class="year">
-            </div>
-            <div class="company-history">
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">2<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">完成A轮融资，加快全国展业步伐，深圳、杭州、大连先后开业</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">9<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">开放平台上线，个人增值和薪资预支上线</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">12<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">汇卡宝上线，开始为企业管理午餐补贴</p>
-                    </div>
-                </div>
-            </div>
+
+        <div class="year2015_01">
+            <h3 class="title">完成天使轮融资</h3>
+            <h3 class="year">2015</h3>
+            <p class="month">1<span>月</span>
+            <p class="details_text">深圳分公司开业。中标Nokia后完成天使轮融资，飞图创投、英诺天使等进入。<p/>
         </div>
-        <div class="Event_history position4">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_1.png" class="year">
-            </div>
-            <div class="company-history">
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">2<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">广州、成都、天津、无锡、合肥、济南、青岛、新疆等先后开业</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">4<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">合规整改，工资账户和福利集市先后推出</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">10<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">启动薪酬平台立顶</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">12<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">平台收到增长迅猛，完成规模化盈利</p>
-                    </div>
-                </div>
-            </div>
+
+        <div class="year2016_05">
+            <h3 class="year">2016</h3>
+            <p class="month">5<span>月</span></p>
+            <p class="details_text">新开北京二部、上海二部、杭州、合肥等多家分公司。</p>
+            <h3 class="title">华东、华北地区多家分公司开业</h3>
         </div>
-        <div class="Event_history position5">
-            <div hisrory_one>
-                <img src="../../images/year-history/Dialog-box_2.png" class="year">
-            </div>
-            <div class="company-history">
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">4<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">启动报销项目内部立项，嘉薪项目天使轮融资</p>
-                    </div>
-                </div>
-                <div class="middle">
-                    <div class="left">
-                        <p class="five">6<span class="mone-one">月</span></p>
-                    </div>
-                    <div class="right">
-                        <p class="Event">平台发布新的产品定价管理办法，平台消费明显提升</p>
-                    </div>
-                </div>
-            </div>
+
+        <div class="year2016_08">
+            <h3 class="title">单月交易额突破一亿</h3>
+            <h3 class="year">2016</h3>
+            <p class="month">8<span>月</span></p>
+            <p class="details_text">单月交易额突破1亿，客户数超过1000+家。新开大连、北京三部、成都等多家分公司。</p>
+        </div>
+
+        <div class="year_new">
+            <h3 class="year">2016</h3>
+            <p class="month">10<span>月</span></p>
+            <p class="details_text">新版移动支持多种机型，UI界面简洁大方，用户体验更快更方便</p>
+            <h3 class="title">嘉福移动端平台全新发布</h3>
+        </div>
+
+        <div class="tree_text">
+            <p class="big_text">携手未来</p>
+            <p>2016年嘉福平台总收入超过2000多万，同比增长超10倍。<span>2017</span>让我们谱写新的篇章...</p>
         </div>
 
 
